--- a/style.css
+++ b/style.css
@@ -160,6 +160,12 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+.btn button:hover {
+  background-color: #1d170f;
+  color: white;
+  /* border: 2px solid white; */
+  /* border-radius: 20px; */
+}
 .about-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -307,10 +313,10 @@ body {
   /* align-items: center; */
   padding: 20px;
   background-color: #b69665;
-  /* border-radius: 10px; */
+  border-radius: 10px;
   width: 100vw;
   max-width: 900px; /* Optional: Adjust the maximum width as needed */
-  margin-top: 15rem;
+  margin-top: 13rem;
 }
 .contact-content {
   background-color: #fdf0d5;
@@ -323,7 +329,7 @@ body {
   width: 100%; /* Ensure inner content stretches */
 }
 .get-intouch {
-  color:black;
+  color:white;
 }
 .contact-form h1 {
   font-size: 24px;
@@ -338,7 +344,7 @@ body {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
-  color:black;
+  color:white;
 }
 
 .contact-form .contact-phone img,
@@ -379,26 +385,230 @@ body {
 }
 
 .contact-form button[type="submit"]:hover {
-  background-color: #f4ede0; 
+  background-color: #b69665; 
   background: transparent;
-  border: 1px solid white;
+  border: 1px solid black;
   font-family: "Montserrat", sans-serif;
+  color: #000;
 }
 /* Media queries for smaller screens */
 @media only screen and (max-width: 768px) {
   .contact-form {
     width: 80%; /* Adjusted width for smaller screens */
     flex-direction: column;
-    margin-top: 20rem;
+    margin-top: 16rem;
+    
+   
   }
   .background-color {
-    min-height: 80vw;
+    min-height: 100vw;
+    background-color: white;
+    
   }
+  
 }
 
 @media only screen and (max-width: 576px) {
   .contact-form {
     width: 90%; /* Adjusted width for even smaller screens */
+     border-radius: 20px;
+    
   }
 }
 /* End */
+/* Pay-nothing */
+.pay-nothing {
+  /* background-image: url(img/hands.jpg); */
+  background-position: center;
+  background-size: cover;
+  min-height: 50vw;
+  /* margin-top: 20.15rem; */
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.7) 20%,
+      rgba(0, 0, 0, 0.2)
+    ),
+    url(img/hands.jpg);
+    padding-top: 50px;
+}
+.pay-nothing h2 {
+  text-align: center;
+  margin-top: 25rem;
+  color: white;
+  font-size: 3rem;
+}
+.unless {
+ color: #b69665;
+}
+.call {
+  background-color: white;
+  padding: 15px;
+  text-align: center;
+/* width: 70vw;
+margin: 0 auto; */
+margin-top: 15rem;
+}
+.call h3 {
+  align-items: center;
+  margin: 1rem;
+  font-size: 30px;
+  color: black;
+  font-style: italic;
+}
+/* Media query for screens with a maximum width of 992px */
+@media screen and (max-width: 992px) {
+  .pay-nothing {
+    min-height: 60vw; /* Adjust min-height for smaller screens */
+    padding-top: 40px; /* Adjust padding-top for smaller screens */
+    
+  }
+  .pay-nothing h2 {
+    margin-top: 50rem; /* Adjust margin-top for smaller screens */
+    font-size: 2.5rem; /* Adjust font-size for smaller screens */
+  }
+  .call {
+    margin-top: 10rem; 
+  }
+}
+
+/* Media query for screens with a maximum width of 576px */
+@media screen and (max-width: 576px) {
+  .pay-nothing {
+    min-height: 100vw; /* Adjust min-height for even smaller screens */
+    margin-top: 15rem;
+    padding-top: 20px;
+  }
+  .pay-nothing h2 {
+    margin-top: 20rem; /* Adjust margin-top for even smaller screens */
+    font-size: 2rem; /* Adjust font-size for even smaller screens */
+  }
+  .call h3 {
+  font-size: 16px;
+  }
+}
+
+.ftr {
+  background-color: #b69665;
+  padding: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  
+  /* background-image: url(img/footer-img.jpg); */
+  /* background: linear-gradient(rgba(40, 40, 40, 0.8), rgba(40, 40, 40, 0.5)),
+    url(img/footer-img.jpg);
+  background-size: cover;
+  background-size: cover;
+  background-position: center; */
+}
+
+.company,
+.contact,
+.address {
+  margin-bottom: 20px; 
+  /* text-align: center; */
+  margin-top: 3rem;
+  color: #fff;
+}
+.social-icons {
+  margin-top: 10px;
+}
+.social-icons a {
+  font-size: 18px;
+  margin: 10px;
+  cursor: pointer;
+  color: white;
+}
+.company h1,
+.contact h1,
+.address h1 {
+  color: #fff;
+}
+
+.company ul {
+  list-style: none; /* Remove the default list styling */
+  padding: 0; /* Remove default padding */
+}
+
+.company li a {
+  text-decoration: none; /* Remove underline from links */
+  color: white; /* Set the color for the links */
+  display: block; /* Make the links block-level for better spacing */
+  margin-bottom: 5px; /* Add margin between the links */
+}
+.company li a:hover {
+  transition: all 0.4s ease;
+  color: black;
+}
+/* Additional styling for the contact information */
+.contact p {
+  margin: 5px 0; /* Add margin to the contact paragraphs */
+}
+.col-2 {
+  /* background-color: #f0f0f0;  */
+  padding: 20px; /* Add padding for spacing */
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.col-2 h3 {
+  color: white; /* Set the color of the heading */
+}
+
+.col-2 input[type="email"] {
+  width: 100%; /* Make the input field take up full width */
+  padding: 10px; /* Add padding for spacing */
+  margin-bottom: 10px; /* Add margin at the bottom for spacing */
+  border-radius: 30px;
+  background-color: white;
+  border: 2px solid white;
+  text-align: center;
+}
+
+.col-2 button {
+  background-color: #b69665; /* Set your desired button background color */
+  color: #fff; /* Set the text color of the button */
+  padding: 5px 10px; /* Add padding for spacing */
+  border: 2px solid white; /* Remove default button border */
+  cursor: pointer; 
+  border-radius: 30px;
+  background: transparent;
+}
+
+.col-2 button:hover {
+  background-color: #b69665; /* Change button background color on hover */
+}
+
+@media screen and (max-width: 768px) {
+  .ftr {
+    flex-direction: column;
+    background-color: #b69665;
+    /* padding: 20px; */
+    /* display: flex; */
+    /* justify-content: space-evenly; */
+    color: #fff;
+    text-align: center;
+  }
+}
+.line {
+  background-color: white;
+  padding:0.3px;
+  /* width: 80vw;
+  margin: 0 auto; */
+}
+footer {
+  background-color: #b69665;
+  color: black;
+  text-align: center;
+  padding: 5px;
+  /* position: fixed; */
+  /* bottom: 0; */
+  /* width: 100%; */
+  /* align-items: center; */
+}
+.footer-content p {
+  align-items: center;
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 12px;
+}
+
